fix code where ticket-conversation-footer height could not be adjusted making the button not centered on the row.

--- a/src/pages/ticket_details/TicketDetails.module.css
+++ b/src/pages/ticket_details/TicketDetails.module.css
@@ -28,7 +28,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: calc(100vh - 280px);
+    height: calc(100vh - 255px);
     overflow-y: auto;
 }
 
@@ -122,7 +122,7 @@
     height: auto;
     justify-content: flex-end;
     align-items: center;
-    padding: 15px 50px;
+    padding: 8px 50px;
     margin-top: 10px;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
